<resources>
    <string name="app_name">EstimaBuild</string>
    <string name="menu_home">Home</string>
    <string name="menu_estimation">Estimation</string>
    <string name="menu_profile">Profile</string>
    <string name="back">Back</string>
    <string name="desc">Description :</string>
    <string name="add_to_estimation">Add to Estimation: $ %.2f</string>
    <string name="dollar">$ </string>
    <string name="button_add">Button Add to Estimation</string>
    <string name="icon_estimate">Estimation icon</string>
    <string name="multiplication_price">%d x $ %.2f</string>
    <string name="price">$ %.2f</string>
    <string name="detail">Product Detail</string>
    <string name="estimation">Estimation</string>
    <string name="estimate_now">Estimate Now</string>
    <string name="profile">Profile</string>
    <string name="profile_img">Profile Image</string>
    <string name="profile_name">Eko Rahayu Widodo</string>
    <string name="profile_email">ekowidodo073@gmail.com</string>
    <string name="empty_data">Empty Data!</string>
    <string name="not_found">Products Not Found!</string>
    <string name="add_data">Add new data.</string>
    <string name="empty_data_img">Empty data image</string>
    <string name="not_found_img">Not found image</string>
    <string name="search_product">Search Products</string>
    <string name="search_icon">Search Icon</string>
    <string name="title_case">case</string>
    <string name="title_monitor1">Samsung Monitor S24R35024 - inch FHD</string>
    <string name="title_monitor2">Xiaomi Monitor 30-inch Curved Gaming</string>
    <string name="title_monitor3">SPC Monitor SM-19HD 19-inch LED</string>
    <string name="title_motherboard1">ASUS PRIME Motherboard H510M-K</string>
    <string name="title_case1">MSI Shield M300 PC Case</string>
    <string name="title_case2">Thermaltake Versa H18 PC Case</string>
    <string name="title_case3">Digital Alliance PC N23 RGB Aura Sync - PC Case</string>
    <string name="not_found_search">cases</string>
    <string name="empty_search"></string>
    <string name="product_list">ProductList</string>
    <string name="product_counter">ProductCounter</string>
    <string name="button_increase">Increased</string>
    <string name="button_decrease">Decreased</string>
    <string name="text_increase">+</string>
    <string name="count">count</string>
    <string name="text_decrease">-</string>
    <string name="count_0">0</string>
    <string name="count_1">1</string>
    <string name="count_2">2</string>
    <string name="toast">Toast</string>
    <string name="total_estimation">The total estimate for all products is $ 204.21</string>
    <string name="key">productId</string>
    <string name="key_empty"></string>
</resources>